--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -174,6 +174,9 @@
   <data name="Contact" xml:space="preserve">
     <value>Əlaqə</value>
   </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value>BİZİMLƏ ƏLAQƏ SAXLAYIN</value>
+  </data>
   <data name="DataNotExists" xml:space="preserve">
     <value />
   </data>
