--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -174,6 +174,9 @@
   <data name="Contact" xml:space="preserve">
     <value>Contact</value>
   </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value>CONTACT US</value>
+  </data>
   <data name="DataNotExists" xml:space="preserve">
     <value>Data not exists</value>
   </data>
