--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -174,6 +174,9 @@
   <data name="Contact" xml:space="preserve">
     <value />
   </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value />
+  </data>
   <data name="DataNotExists" xml:space="preserve">
     <value />
   </data>
