--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -244,7 +244,7 @@
     <value />
   </data>
   <data name="News" xml:space="preserve">
-    <value />
+    <value>Новости</value>
   </data>
   <data name="NoEmailsWereFound" xml:space="preserve">
     <value />
