--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -252,6 +252,9 @@
   <data name="Name" xml:space="preserve">
     <value>Ad</value>
   </data>
+  <data name="nese" xml:space="preserve">
+    <value />
+  </data>
   <data name="News" xml:space="preserve">
     <value>Xəbər</value>
   </data>
